[RESTEASY-3082] Add Java SE 17 testing support.
https://issues.redhat.com/browse/RESTEASY-3082

Signed-off-by: James R. Perkins <jperkins@redhat.com>